--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,74 @@
   publisher={The University of Chicago Press}
 }
 
+@inproceedings{dyer2013simple,
+  title={A simple, fast, and effective reparameterization of {IBM} model 2},
+  author={Dyer, Chris and Chahuneau, Victor and Smith, Noah A},
+  year={2013},
+  booktitle={Proceedings of NAACL},
+  organization={Association for Computational Linguistics}
+}
+
+
+@inproceedings{chiarcos2011working,
+  title={Working Group for Open Data in Linguistics: Status Quo and Perspectives.},
+  author={Chiarcos, Christian and Hellmann, Sebastian},
+  booktitle={OKCon},
+  year={2011}
+}
+
+
+@inproceedings{mccrae2016open,
+  title={The Open Linguistics Working Group: Developing the Linguistic Linked Open Data Cloud.},
+  author={McCrae, John P and Chiarcos, Christian and Bond, Francis and Cimiano, Philipp and Declerck, Thierry and de Melo, Gerard and Gracia, Jorge and Hellmann, Sebastian and Klimek, Bettina and Moran, Steven and others},
+  booktitle={LREC},
+  year={2016}
+}
+
+
+@article{sompel2004resource,
+  title={Resource harvesting within the OAI-PMH framework},
+  author={Sompel, Herbert van de and Nelson, Michael L and Lagoze, Carl and Warner, Simeon},
+  journal={D-Lib Magazine; 2004 [10] 12},
+  year={2004},
+  publisher={[SI]}
+}
+
+
+@inproceedings{mccrae2015reconciling,
+  title={Reconciling heterogeneous descriptions of language resources},
+  author={McCrae, John Philip and Cimiano, Philipp and Rodriguez-Doncel, Victor and Suero, Daniel Vila and Gracia, Jorge and Matteis, Luca and Navigli, Roberto and Abele, Andrejs and Vulcu, Gabriela and Buitelaar, Paul},
+  booktitle={Proceedings of the 4th Workshop on Linked Data in Linguistics: Resources and Applications},
+  pages={39--48},
+  year={2015}
+}
+
+
+@inproceedings{mccrae2015one,
+  title={One ontology to bind them all: The META-SHARE OWL ontology for the interoperability of linguistic datasets on the Web},
+  author={McCrae, John P and Labropoulou, Penny and Gracia, Jorge and Villegas, Marta and Rodr{\'\i}guez-Doncel, V{\'\i}ctor and Cimiano, Philipp},
+  booktitle={International Semantic Web Conference},
+  pages={271--282},
+  year={2015},
+  organization={Springer}
+}
+
+
+@article{simons2001olac,
+  title={OLAC Protocol for Metadata Harvesting},
+  author={Simons, G and Bird, S},
+  journal={Open Language Archives Community. Available at http://www. languagearchives. org/OLAC/protocol. html},
+  year={2001}
+}
+
+
+@article{dublin1998dublin,
+  title={Dublin {Core} metadata element set, version 1.1: Reference description},
+  author={Dublin Core Metadata Initiative and others},
+  journal={http://dublincore. org/documents/dces/},
+  year={1998}
+}
+
 @book{trudgill1983on,
 author={Trudgill, Peter},
 year=1983,
@@ -74,7 +142,7 @@ publisher={Blackwell}
 }
 
 @inproceedings{junker2011linguistic,
-  title={A linguistic atlas for endangered languages: www. atlas-ling. ca},
+  title={A linguistic atlas for endangered languages: www.atlas-ling.ca},
   author={Junker, Marie-Odile and Stewart, Terry},
   booktitle={Proceedings of EDULEARN 11: International Conference on Education and New Learning Technologies},
   pages={4--6},
@@ -945,6 +1013,16 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 	Year   = {2016}
 }
 
+@incollection{chiarcos2013building,
+  title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
+  author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer, Richard},
+  booktitle={The People’s Web Meets NLP},
+  pages={315--348},
+  year={2013},
+  publisher={Springer}
+}
+
+
 @article{bernard1992preserving,
  title={Preserving language diversity},
  author={Bernard, H},
@@ -995,6 +1073,16 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  year={2006}
 }
 
+@incollection{chiarcos2012linking,
+  title={Linking linguistic resources: Examples from the open linguistics working group},
+  author={Chiarcos, Christian and Hellmann, Sebastian and Nordhoff, Sebastian},
+  booktitle={Linked Data in Linguistics},
+  pages={201--216},
+  year={2012},
+  publisher={Springer}
+}
+
+
 @book{nettle2000vanishing,
  title={Vanishing voices: The extinction of the world's languages},
  author={Nettle, Daniel and Romaine, Suzanne},
@@ -1030,17 +1118,6 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  publisher={John Benjamins Amsterdam, The Netherlands}
 }
 
-
-
-@incollection{chiarcos2013building,
- title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
- author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo and Nordhoff, Sebastian and Littauer, Richard},
- booktitle={The People's Web Meets NLP},
- pages={315--348},
- year={2013},
- publisher={Springer}
-}
-
 @inproceedings{chiarcos2012open,
  title={The {Open Linguistics Working Group}},
  author={Chiarcos, Christian and Hellmann, Sebastian and Nordhoff, Sebastian and Moran, Steven and Littauer, Richard and Eckle-Kohler, Judith and Gurevych, Iryna and Hartmann, Silvana and Matuschek, Michael and Meyer, Christian M},
@@ -1049,12 +1126,31 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  year={2012}
 }
 
+@incollection{mccrae2015linghub,
+  title={Linghub: a Linked Data based portal supporting the discovery of language resources},
+  author={McCrae, John P and Cimiano, Philipp},
+  booktitle={SEMANTiCS (Posters \& Demos)},
+  publisher={SEMANTiCS},
+  volume={1481},
+  pages={88--91},
+  year={2015}
+}
+
 @book{bird2009natural,
   title={Natural language processing with Python: analyzing text with the natural language toolkit},
   author={Bird, Steven and Klein, Ewan and Loper, Edward},
   year={2009},
   publisher={" O'Reilly Media, Inc."}
 }
+
+@article{huang2017linking,
+  title={Linking Basic Lexicon to Shared Ontology for Endangered Languages: A Linked Data Approach Toward Formosan Languages},
+  author={Huang, Chu-Ren and Hsieh, Shu-Kai and Pr{\'e}vot, Laurent and Hsiao, Pei-Yi and Chang, Henry Y},
+  journal={Journal of Chinese Linguistics},
+  year={2017},
+  publisher={Chinese University Press}
+}
+
 
 @inproceedings{bird2006nltk,
  title={{NLTK}: the natural language toolkit},
