--- a/thesis.tex
+++ b/thesis.tex
@@ -101,7 +101,7 @@
 
 \noindent This work also draws heavily on an open source repository on GitHub, for which Gina Chiodo, Hugh Paterson III, Liling Tan, Ryan Txanson, Robert Forkel, Aidan Pine, Nick Heindl, Kevin Scannell, Sjur Moshagen, Waldir Pimenta, Joshua Olson, Edwin Ko, Arne Neumann, and Pablo Duboue are all contributors (in order of contributions) as of today, as well as the bots ReadmeCritic, greenkeeper[bot] (run by my friend, Gregor Martynus), and orthographic-pedant (run by Travis Hoppe).
 
-Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/}}, among a suite of other tools.
+Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/}}; Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/. Last accessed April~, 2018.}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/}}, among a suite of other tools.
 
 \newpage
 
